# RENDER-analysis

./: .gitignore  DEPENDENCIES.md  LICENSE  pipeline.sh
metadata/: comparisons.csv  em.csv  rna.csv
scripts/: aggregate_dss.py  aggregate_transcripts.r  analyze.py  combine_reads.py  differential_gene_expression.r  dss.r  filter_dss.py  get_gene_metadata.r  lib.py  pipeline.sh  plot.py  pyproject.toml  volcano_plot.py
