[project]
name = "RENDER-analysis"
version = "0.1.0"
description = " Analysis for 'Programmable epigenome editing by transient delivery of CRISPR epigenome editor ribonucleoproteins'"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "polars>=1.27.1",
    "scipy>=1.15.3",
]

[tool.uv]
dev-dependencies = [
    "ipython>=9.2.0",
]
